@@ -2490,6 +2490,11 @@ password=P@ssW0rd!
                 <td>0 .. *</td>
                 <td>Triggers a build after a particular time threshold.</td>
             </tr>
+           <tr>
+                <td><a href="#veto">&lt;veto&gt;</a></td>
+                <td>0 .. *</td>
+                <td>Checks for changes in another project and will veto a build if changes are found.</td>
+            </tr>
             <tr>
                 <td><a href="#vss">&lt;vss&gt;</a></td>
                 <td>0 .. *</td>
