@@ -4,6 +4,14 @@ Changes listed by release, then alphabetically.
 
 CruiseControl Release Notes - 2.6.2-dev
 
+documentation
+======================
+
+configxml.html
+----------------------
+* Added "veto" sourcecontrol to modificationset overview documentation (main/docs/configxml.html#modificationset). Patch by Allan Wick.
+
+
 build loop
 ======================
 
